fix landing overflow, increase project section animation duration

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,6 +25,7 @@ section {
 
 #landing {
   height: 100vh;
+  overflow-y: hidden;
 }
 
 #about {
